--- a/layout/css/style.css
+++ b/layout/css/style.css
@@ -1,3 +1,10 @@
 .hidden {
     display: none;
 }
+
+table.dataTable thead th,
+table.dataTable thead td,
+table.dataTable tfoot th,
+table.dataTable tfoot td {
+    text-align: right;
+}
