--- a/layout/css/logIn.css
+++ b/layout/css/logIn.css
@@ -43,3 +43,11 @@ form .btn:hover {
     box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px,
         rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
 }
+
+span[data-target] {
+    cursor: pointer;
+}
+
+.pw-toggle {
+    height: 1rem;
+}
